header navigation and footer _button gaps fixed

--- a/13_adaptive-layout-mobile/css/media.css
+++ b/13_adaptive-layout-mobile/css/media.css
@@ -428,6 +428,19 @@
 }
 
 @media (max-width: 1440px) {
+  .nav__list {
+    justify-content: space-between;
+    gap: 0;
+  }
+
+  .header__nav {
+    width: 100%;
+  }
+
+  .header__logo {
+    margin-right: 80px;
+  }
+
   .about-us__descr {
     max-width: 100%;
   }
@@ -1140,7 +1153,6 @@
     height: 39px;
     padding: 12px 28px;
     border: none;
-    margin-left: 55px;
     margin-bottom: 16px;
   }
 
@@ -1192,4 +1204,5 @@
   .hww__back {
     height: 160px;
   }
+
 }
